Conexion a al base al servido

--- a/src/views/prestamos/add.hbs
+++ b/src/views/prestamos/add.hbs
@@ -33,7 +33,7 @@
             
 
             <div class="card-body">
-            <form action="/prestamos/add/{{libro.id_libro}}" method="POST">
+            <form action="/prestamos/add/{{libro.id_libros}}" method="POST">
  <div class="form-row">
     <div class="form-group col-md-6">
       <label >Cedula de identidad  del Lectore</label>
