--- a/src/views/prestamos/list.hbs
+++ b/src/views/prestamos/list.hbs
@@ -58,8 +58,8 @@
                   <td>{{titulo_libro}}</td>
                   <td>{{autor_libro}}</td>
                   <td>{{publicacion_libro}}</td>
-                  <td>{{stock_libro}}</td>
-                  <td><a href="/prestamos/add/{{id_libro}}"  class="btn btn-info btn-sm">
+                  <td>{{descripcion}}</td>
+                  <td><a href="/prestamos/add/{{id_libros}}"  class="btn btn-info btn-sm">
 
 	Selecionar</a> 
 	</td>
