--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -1,4 +1,5 @@
 
+ {{#if user}}
  <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
@@ -114,3 +115,4 @@
     </div>
 
   </aside>
+{{/if}}
