--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -30,7 +30,7 @@
         </div>
         <div class="info">
          
-          <a href="#" class="d-block"> Bienvnido {{user.nombres }}</a>
+          <a href="#" class="d-block"> Bienvenido {{user.nombres }}</a>
         </div>
       </div>
 
