--- a/src/views/carreras/edit.hbs
+++ b/src/views/carreras/edit.hbs
@@ -8,7 +8,7 @@
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+              <li class="breadcrumb-item"><a href="/principal">Inicio</a></li>
               <li class="breadcrumb-item"><a href="/carreras">Carreras</a></li>
               <li class="breadcrumb-item active">Editar</li>
             </ol>
