--- a/src/views/carreras/add.hbs
+++ b/src/views/carreras/add.hbs
@@ -37,7 +37,7 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label >Carrera</label>
-      <input type="text" class="form-control" name="nombre" placeholder="Carrera" autofocus>
+      <input type="text" class="form-control" name="nombre" placeholder="Carrera" autofocus required>
     </div>
     
   </div>
