--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="/css/color.css">
   <link rel="stylesheet" href="/css/dataTables.bootstrap4.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  
+  <link rel="shortcut icon" href="/img/logo2.PNG" type="image/x-icon">
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
