--- a/src/views/lectores/add.hbs
+++ b/src/views/lectores/add.hbs
@@ -37,22 +37,22 @@
  <div class="form-row">
     <div class="form-group col-md-6">
       <label >Nombres</label>
-      <input type="text" class="form-control" name="nombres" placeholder="Nombres" autofocus>
+      <input type="text" class="form-control" name="nombres" placeholder="Nombres" autofocus required>
     </div>
     <div class="form-group col-md-6">
       <label >Apellidos</label>
-      <input type="text" class="form-control" name="apellidos" placeholder="Apellidos">
+      <input type="text" class="form-control" name="apellidos" placeholder="Apellidos" required>
     </div>
   </div>
 
  <div class="form-row">
     <div class="form-group col-md-6">
       <label >Cedula de Identidad</label>
-      <input type="text" class="form-control" name="ci" placeholder="Cedula de Identidad">
+      <input type="text" class="form-control" name="ci" placeholder="Cedula de Identidad" required>
     </div>
     <div class="form-group col-md-6">
       <label >Direccion</label>
-      <input type="text" class="form-control" name="direccion" placeholder="Direccion">
+      <input type="text" class="form-control" name="direccion" placeholder="Direccion"required>
     </div>
   </div>
   
@@ -60,12 +60,12 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label >Telefono</label>
-      <input type="text" class="form-control" name="telefono" placeholder="Telefono">
+      <input type="text" class="form-control" name="telefono" placeholder="Telefono"required>
     </div>
   
     <div class="form-group col-md-2">
       <label >Tipo Lector</label>
-      <select name="tipolector" class="form-control">
+      <select name="tipolector" class="form-control" required>
         <option selected>Tipo Lector</option>
         {{#each tipolector}}
          
