--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -7,7 +7,7 @@
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body ">
-      <p class="login-box-msg">Iniciar Secion</p>
+      <p class="login-box-msg">Iniciar Sesion</p>
 
       <form action="/login" method="post">
         <div class="input-group mb-3">
