--- a/src/views/prestamos/pendin.hbs
+++ b/src/views/prestamos/pendin.hbs
@@ -63,7 +63,7 @@
              
                   <td><a href="/prestamos/edit/{{id}}"  class="btn btn-info btn-sm">
 	<i class="fas fa-pencil-alt"></i>
-	Entregar</a> 
+	Devolver</a> 
 </td>
                   
                 </tr>
