areglo stok carrera del libro

--- a/src/views/libros/list.hbs
+++ b/src/views/libros/list.hbs
@@ -48,6 +48,7 @@
                   <th>Titulo</th>
                   <th>Autor</th>
                   <th>Año Publicacion</th>
+                   <th>Carrera</th>
                   <th>Stock</th>
                   <th>Accion</th>
                   
@@ -63,6 +64,7 @@
                   <td>{{titulo_libro}}</td>
                   <td>{{autor_libro}}</td>
                   <td>{{publicacion_libro}}</td>
+                  <td>{{nombre}}</td>
                   <td>{{stock_libro}}</td>
                   <td><a href="/libros/edit/{{id_libros}}"  class="btn btn-info btn-sm">
 	<i class="fas fa-pencil-alt"></i>
