--- a/src/views/prestamos/list.hbs
+++ b/src/views/prestamos/list.hbs
@@ -43,6 +43,8 @@
                   <th>Titulo</th>
                   <th>Autor</th>
                   <th>Año Publicacion</th>
+                  <th>Carrera</th>
+                
                   <th>Estado</th>
                   <th>Accion</th>
                   
@@ -58,6 +60,8 @@
                   <td>{{titulo_libro}}</td>
                   <td>{{autor_libro}}</td>
                   <td>{{publicacion_libro}}</td>
+                
+                  <td>{{nombre}}</td>
                   <td>{{descripcion}}</td>
                   <td><a href="/prestamos/add/{{id_libros}}"  class="btn btn-info btn-sm">
 
