correccion presramo para servido de base de datos

--- a/src/views/prestamos/list.hbs
+++ b/src/views/prestamos/list.hbs
@@ -43,7 +43,7 @@
                   <th>Titulo</th>
                   <th>Autor</th>
                   <th>Año Publicacion</th>
-                  <th>Carrera</th>
+                  <th>Categoria</th>
                 
                   <th>Estado</th>
                   <th>Accion</th>
