--- a/src/views/carreras/add.hbs
+++ b/src/views/carreras/add.hbs
@@ -4,12 +4,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1> Usuarios</h1>
+            <h1> Categoria</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="/principal">Inicio</a></li>
-              <li class="breadcrumb-item"><a href="/carreras">Carreras</a></li>
+              <li class="breadcrumb-item"><a href="/carreras">Categoria</a></li>
               <li class="breadcrumb-item active">Agregar</li>
             </ol>
           </div>
@@ -23,7 +23,7 @@
         <div class="col-12">
           <div class="card">
             <div class="card-header">
-              <h3 class="card-title">Agregar Carrera</h3>
+              <h3 class="card-title">Agregar Categoria</h3>
               <div class="card-tools">
                 <button type="button" class="btn btn-tool .btn-flat" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
                 <i class="fas fa-minus"></i></button>
@@ -36,7 +36,7 @@
             <form action="/carreras/add" method="POST">
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label >Carrera</label>
+      <label >Categoria</label>
       <input type="text" class="form-control" name="nombre" placeholder="Carrera" autofocus required>
     </div>
     
