--- a/src/views/carreras/list.hbs
+++ b/src/views/carreras/list.hbs
@@ -4,12 +4,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Carreras</h1>
+            <h1>Categoria</h1>
           </div>
          <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="/principal">Inicio</a></li>
-              <li class="breadcrumb-item active">Carreras</li>
+              <li class="breadcrumb-item active">Categoria</li>
             </ol>
           </div>
         </div>
@@ -22,7 +22,7 @@
         <div class="col-12">
           <div class="card">
             <div class="card-header">
-              <h3 class="card-title">Lista de Carreras</h3>
+              <h3 class="card-title">Lista de Categorias</h3>
               <div class="card-tools">
                 <button type="button" class="btn btn-tool .btn-flat" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
                 <i class="fas fa-minus"></i></button>
@@ -32,7 +32,7 @@
             <div class="card-header">
             <span class="pull-left"><a href="/carreras/add"  class="btn btn-primary btn-sm" style = " float: right;" ><span class="glyphicon glyphicon-plus"></span>
               <i class="fas fa-plus"></i>
-                              Agregar Carreras
+                              Agregar Categoria
                           </a> <br>
               </div>
 
