--- a/src/views/libros/list.hbs
+++ b/src/views/libros/list.hbs
@@ -48,7 +48,7 @@
                   <th>Titulo</th>
                   <th>Autor</th>
                   <th>Año Publicacion</th>
-                   <th>Carrera</th>
+                   <th>Categoria</th>
                   <th>Stock</th>
                   <th>Accion</th>
                   
@@ -67,10 +67,10 @@
                   <td>{{nombre}}</td>
                   <td>{{stock_libro}}</td>
                   <td><a href="/libros/edit/{{id_libros}}"  class="btn btn-info btn-sm">
-	<i class="fas fa-pencil-alt"></i>
+	<i class="fas fa-pencil-alt"></i> Editar
 	</a> 
 	<a href="/libros/delete/{{id_libros}}"  class="btn btn-danger btn-sm">
-	<i class="fas fa-trash"></i>
+<i class="fas fa-trash"></i> Eliminar
 	 </a></td>
                   
                 </tr>
