--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -50,7 +50,7 @@
           <li class="nav-item">
             <a href="/carreras" class="nav-link">
               <i class="nav-icon fas fa-desktop"></i>
-              <p>Carrera</p>
+              <p>Categorias</p>
             </a>
           </li>
           <li class="nav-item">
