correccion  de errores y validacion de datos

--- a/src/views/prestamos/list.hbs
+++ b/src/views/prestamos/list.hbs
@@ -31,10 +31,10 @@
             </div>
           
 
-            <div class="card-body">
+            <div class="card-body table-responsive  ">
 
-            
-              <table  class="table table-bordered table-hover AllDataTables">
+           
+              <table  class="table table-bordered table-hover  AllDataTables">
                 <thead>
                 <tr>
                  
