--- a/src/views/lectores/list.hbs
+++ b/src/views/lectores/list.hbs
@@ -36,7 +36,7 @@
                           </a> <br>
               </div>
 
-            <div class="card-body">
+            <div class="card-body table-responsive">
 
             
               <table  class="table table-bordered table-hover AllDataTables">
@@ -47,7 +47,7 @@
                   <th>Apellido</th>
                   <th>Cedula</th>
                   <th>Telefono</th>
-                  <th>E-mail</th>
+                  <th>Direccion</th>
                   <th>Tipo usuario</th>
                   <th>Accion</th>
                   
