--- a/src/views/libros/add.hbs
+++ b/src/views/libros/add.hbs
@@ -34,63 +34,59 @@
 
             <div class="card-body">
             <form action="/libros/add" method="POST">
-
  <div class="form-row">
     <div class="form-group col-md-6">
       <label >Codigo</label>
-      <input type="text" class="form-control" name="codigo_libro" placeholder="Codigo" autofocu required>
+      <input type="text"  class="form-control" name="codigo_libro" placeholder="Codigo" autofocus required>
     </div>
     <div class="form-group col-md-6">
       <label >ISBN</label>
-      <input type="text" class="form-control" name="isbn_libro" placeholder="ISBN Libro" required>
+      <input type="text" class="form-control" name="isbn_libro" placeholder="ISBN Libro"required>
     </div>
   </div>
 
  <div class="form-row">
     <div class="form-group col-md-6">
       <label >Titulo</label>
-      <input type="text" class="form-control" name="titulo_libro" placeholder="Titulo"required>
+      <input type="text"  class="form-control" name="titulo_libro" placeholder="Titulo"required>
     </div>
     <div class="form-group col-md-6">
       <label >Stock</label>
-      <input type="text" class="form-control" name="stock_libro" placeholder="Stock"required>
+      <input type="text"  class="form-control" name="stock_libro" placeholder="Stock"required>
     </div>
   </div>
    <div class="form-row">
     <div class="form-group col-md-6">
       <label >Autor</label>
-      <input type="text" class="form-control" name="autor_libro" placeholder="Autor"required
+      <input type="text"  class="form-control" name="autor_libro" placeholder="Autor"required>
     </div>
     <div class="form-group col-md-6">
       <label >Año de Publicacion</label>
-      <input type="text" class="form-control" name="publicacion_libro" placeholder="Año de Publicacion"required
+      <input type="text"class="form-control" name="publicacion_libro" placeholder="Año de Publicacion"required>
     </div>
   </div>
 <div class="form-row">
     <div class="form-group col-md-6">
       <label >Editorial</label>
-      <input type="text" class="form-control" name="editorial_libro" placeholder="Editorial" required>
+      <input type="text"  class="form-control" name="editorial_libro" placeholder="Editorial"required>
     </div>
     <div class="form-group col-md-6">
       <label >Ediccion</label>
-      <input type="text" class="form-control" name="ediccion_libro" placeholder="Edicion" required>
+      <input type="text" class="form-control" name="ediccion_libro" placeholder="Edicion"required>
     </div>
   </div>
 
     <div class="form-row">
     <div class="form-group col-md-6">
       <label >Idioma</label>
-      <input type="text" class="form-control" name="idioma_libro" placeholder="Idioma" required>
+      <input type="text"  class="form-control" name="idioma_libro" placeholder="Idioma"required>
     </div>
     <div class="form-group col-md-6">
       <label >Ejemplares</label>
-      <input type="text" class="form-control" name="ejemplares_libro" placeholder="Ejemplares"required>
+      <input type="text" class="form-control" name="ejemplares_libro" placeholder="Ejemplares" required>
     </div>
   </div>
- 
   <div class="form-row">
-   
-  
     <div class="form-group col-md-6">
       <label >Carreras</label>
       <select name="facultad" class="form-control" required>
