--- a/src/views/prestamos/all.hbs
+++ b/src/views/prestamos/all.hbs
@@ -32,7 +32,7 @@
             </div>
           
 
-            <div class="card-body">
+            <div class="card-body table-responsive">
 
             
               <table  class="table table-bordered table-hover AllDataTables">
