--- a/src/views/usuarios/list.hbs
+++ b/src/views/usuarios/list.hbs
@@ -36,7 +36,7 @@
                           </a> <br>
               </div>
 
-            <div class="card-body">
+            <div class="card-body table-responsive">
 
             
               <table  class="table table-bordered table-hover AllDataTables">
