--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,7 +13,7 @@
   </div>
 </nav>
 
-            <div class="card-body">
+            <div class="card-body table-responsive">
 <center><h1>Buscar Libros </h1></center>
 
 <!-- 
