--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,7 +13,7 @@
   </div>
 </nav>
 
-            <div class="card-body table-responsive">
+            <div class="card-body ">
 <center><h1>Buscar Libros </h1></center>
 
 <!-- 
@@ -40,7 +40,7 @@
 </form>
 <br>
 -->
-            
+            <div class="table-responsive">
               <table  class="table table-bordered table-hover AllDataTables">
                 <thead>
                 <tr>
@@ -74,4 +74,5 @@
                 </tbody>
               
               </table>
+              </div>
             </div>
