--- a/src/views/libros/add.hbs
+++ b/src/views/libros/add.hbs
@@ -88,9 +88,9 @@
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label >Carreras</label>
+      <label >Categoria</label>
       <select name="facultad" class="form-control" required>
-        <option selected>Carrera</option>
+        <option selected>Categoria</option>
         {{#each carrera}}
          
         <option>{{nombre}}</option>
