--- a/src/views/libros/edit.hbs
+++ b/src/views/libros/edit.hbs
@@ -92,7 +92,7 @@
    
   
     <div class="form-group col-md-6">
-      <label >Carreras</label>
+      <label >Categoria</label>
       <select name="facultad" class="form-control">
         <option selected>{{libro.tipo}}</option>
         
