--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <title>Sistema bibliotecario</title>
     <meta charset="UTF-8">
+     <meta name="author" content="https://www.facebook.com/javier.velasque.562" />
+    <meta name="description" content="Sistema Bibliotecario del Instituto Superior Tecnologico  Vicente Leon" />
+    <meta name="Keywors" content="biblioteca,  vicente, leon, prestamos, libros, estado,">
     <meta name="viewport" content="width={device-width}, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sistema bibliotecario</title>
+   
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/all.min.css">
   <link rel="stylesheet" href="/css/adminlte.min.css">
@@ -18,11 +22,13 @@
 <div class="wrapper">
   {{>navegation}}
   {{>message}}
-  
-  
-    {{{ body}}}
+ 
+  <main>
+{{{ body}}}
+  </main>
+    
 
-  
+
     </div>
     
 </body>
