adcicion de m odulo de reportes de prestamos

--- a/src/views/lectores/list.hbs
+++ b/src/views/lectores/list.hbs
@@ -30,7 +30,8 @@
               </div>              
             </div>
             <div class="card-header">
-            <span class="pull-left"><a href="/lectores/add"  class="btn btn-primary btn-sm" style = " float: right;" ><span class="glyphicon glyphicon-plus"></span>
+            <span class="pull-left">
+              <a href="/lectores/add"  class="btn btn-primary btn-sm" style = " float: right;" ><span class="glyphicon glyphicon-plus"></span>
               <i class="fas fa-plus"></i>
                               Agregar Lector
                           </a> <br>
