--- a/src/views/prestamos/all.hbs
+++ b/src/views/prestamos/all.hbs
@@ -31,6 +31,14 @@
               </div>              
             </div>
           
+  <div class="card-header">
+            <span class="pull-left">
+              <a href="/prestamos/pdf"  class="btn btn-primary btn-sm" style = " float: right;" ><span class="glyphicon glyphicon-plus"></span>
+              <i class="fas fa-download"></i>
+                              Generar Reporte
+                          </a> 
+                          <br>
+              </div>
 
             <div class="card-body table-responsive">
 
