--- a/src/views/partials/message.hbs
+++ b/src/views/partials/message.hbs
@@ -1,8 +1,21 @@
+<style>
+    #message {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+#inner-message {
+    margin: 0 auto;
+}
+</style>
 {{#if message}}
+<div id="message">
+    <br><br>
 <div class="container p-4">
     <div class="row">
         <div class="col-md-4 mx-auto">
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <div id="inner-message" class="alert alert-danger alert-dismissible fade show" role="alert">
                 {{message}}
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -11,9 +24,13 @@
         </div>
     </div>
 </div>
+</div>
+
 {{/if}}
 
 {{#if success}}
+<div id="message">
+    <br><br>
 <div class="container p-4">
     <div class="row">
         <div class="col-md-4 mx-auto">
@@ -26,4 +43,12 @@
         </div>
     </div>
 </div>
+</div>
 {{/if}}
+<script>
+    window.setTimeout(function() {
+    $(".alert").fadeTo(500, 0).slideUp(500, function(){
+        $(this).remove(); 
+    });
+}, 1000);
+</script>
