--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -16,8 +16,10 @@
   </nav>
    <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="#" class="brand-link">
-   
+      <a href="/" class="brand-link">
+      <img src="https://res.cloudinary.com/dzcptjcns/image/upload/v1592081285/logo2_vxjeec.png"  class="brand-image img-circle elevation-3"
+           style="opacity: .8">
+           
       <span class="brand-text font-weight-light">Sistema Bibliotecario</span>
     </a>
 
@@ -26,7 +28,7 @@
       <!-- Sidebar user (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-         
+          <img src="https://res.cloudinary.com/dzcptjcns/image/upload/v1592081216/avatar_rgrah1.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
          
