--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -13,7 +13,17 @@
   </div>
 </nav>
 
+  <div class="carousel carousel-slider">
+    <img src="https://istvicenteleon.edu.ec/site/images/banners/0.jpg">
+   
+  </div>
+  <script>
+    var instance = M.Carousel.init({
+    fullWidth: true
+  });
 
+ 
+  </script>
 
 
 
