--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -27,7 +27,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
             
   {{/if}}
-  <link rel="shortcut icon" href="https://res.cloudinary.com/dzcptjcns/image/upload/v1592081285/logo2_vxjeec.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://res.cloudinary.com/dzcptjcns/image/upload/t_media_lib_thumb/v1592336787/WhatsApp_Image_2020-04-07_at_12.03.52_PM_wty4jw.jpg" type="image/x-icon">
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
