--- a/src/views/lectores/add.hbs
+++ b/src/views/lectores/add.hbs
@@ -60,7 +60,7 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label >Telefono</label>
-      <input type="text" class="form-control" name="telefono" placeholder="Telefono"required>
+      <input type="text" class="form-control" name="telefono" placeholder="Telefono">
     </div>
   
     <div class="form-group col-md-2">
