--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,7 +1,7 @@
 <center>
 <div class="login-box">
   <div class="login-logo">
-    <a href="#"><b>Sistema</b>Bibliotecario</a>
+    <a href="."><b>Sistema</b>Bibliotecario</a>
     <br><br><br>
   </div>
   <!-- /.login-logo -->
